vercre-vci/tests/snapshots/deferred_flow__credential-response.snap
---
source: vercre-vci/tests/deferred_flow.rs
assertion_line: 31
expression: credential_resp
---
transaction_id: "[transaction_id]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: "[c_nonce_expires_in]"

