vercre-vci/tests/snapshots/deferred_flow__deferred-response.snap
---
source: vercre-vci/tests/deferred_flow.rs
assertion_line: 39
expression: deferred_resp
---
format: jwt_vc_json
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: "[c_nonce_expires_in]"

